# mulai-plus

./: .dockerignore  .env.example  .gitignore  README.md  biome.json  bts.jsonc  docker-compose.production.yml  docker-compose.staging.yml  package.json
.github/workflows/: production.yml  staging.yml
.pi-lens/: metrics-history.json  turn-state.json
.pi-lens/cache/: javascript-rules-v1.json  jscpd.meta.json  knip.meta.json  session-start-guidance.meta.json  todo-baseline.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
apps/ai/: .dockerignore  Dockerfile  RUN.md  pyproject.toml
apps/ai/src/: chatbot_db.py  config.py  db.py  main.py  routes.py  schemas.py  tools.py
apps/ai/src/engine/: responder.py
apps/ai/src/mulai_plus_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/ai/tests/: test_responder.py
apps/server/: .env.example  Dockerfile  package.json  tsconfig.json  tsdown.config.ts
apps/server/.pi-lens/: turn-state.json  worklog.jsonl
apps/server/.pi-lens/cache/: typescript-rules-v1.json
apps/server/src/: index.ts
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
apps/web/.pi-lens/: turn-state.json
apps/web/.pi-lens/cache/: tsx-rules-v1.json  typescript-rules-v1.json
apps/web/src/: globals-app.css  proxy.ts  types.d.ts
apps/web/src/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
docs/: analytics-tracking-plan.md  uat-1.md
(+314 files in other folders)
